# heirloom_interview_challenge_lisadanz

./: README.md  pyproject.toml
ansible/: pyproject.toml  requirements.yml  reset.yml  site.yml
ansible/group_vars/: README.md
ansible/roles/mysql-cluster/defaults/: main.yml
ansible/roles/mysql-cluster/tasks/: main.yml
ansible/roles/mysql-cluster/templates/: storage_manifest.yml.j2  volume_manifest.yml.j2
kubernetes/: README.md  mysql-one-off-backup.yml
