[tool.poetry]
name = "site-software-infrastructure-setup"
version = "0.1.0"
description = "Initializes on-site software infrastructure"
authors = ["Lisa Danz <lmdanz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.0"
ansible = "^9.0" # kubespray, as of this writing, cannot support newer versions of Ansible
netaddr = "^1.3.0" # needed by kubespray
jsonschema = "^4.23.0" # needed by kubespray
jmespath = "^1.0.1" # needed by kubespray
